--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -115,7 +115,7 @@ class='bg-img'
 style='background-image:url("img/bg/bg1.jpg")'>
   <div class='bg-center-container'>
     <h1 class='bg-heading'>
-      the Team
+      The Team
     </h1>
   </div>
 </div>
@@ -137,6 +137,34 @@ style='background-image:url("img/bg/bg1.jpg")'>
       </div>
     <% } %>
   </div>
+</div>
+
+<div
+class='bg-img'
+style='background-image:url("img/bg/bg1.jpg")'>
+  <div class='bg-center-container'>
+    <h1 class='bg-heading'>
+      Lab News
+    </h1>
+  </div>
+</div>
+
+<div class='grid-x grid-padding-x grid-container medium-up-3 grid-padding-y add-padd' >
+    <% for (let i = 0; i < 3; i++) { %>
+      <div class='cell'>
+        <div class='my-card'>
+          <div 
+            class='card-img'
+            style='background-image: url("<%=results.news[i].image %>");'
+          ></div>
+          <h4><%=results.news[i].name %></h4>
+          <p class="news-text">
+            <%=results.news[i].description %>
+          </p>
+          <button class="hollow button" href="#">Read More</button>
+        </div>
+      </div>
+    <% } %>
 </div>
 
 <% include ../partials/footer %>
