--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -29,6 +29,7 @@ style='background-image:url("img/bg/bg1.jpg")'>
 </div>
 <div
 class='bg-img'
+id='about'
 style='background-image:url("img/bg/bg2.jpg")'>
   <div class='bg-center-container'>
     <h1 class='bg-heading'>
@@ -53,6 +54,7 @@ style='background-image:url("img/bg/bg2.jpg")'>
 </div>
 <div
 class='bg-img'
+id='research'
 style='background-image:url("img/bg/bg3.jpg")'>
   <div class='bg-center-container'>
     <h1 class='bg-heading'>
@@ -80,6 +82,7 @@ style='background-image:url("img/bg/bg3.jpg")'>
 
 <div
 class='bg-img'
+id='publications'
 style='background-image:url("img/bg/bg4.jpg")'>
   <div class='bg-center-container'>
     <h1 class='bg-heading'>
@@ -112,7 +115,8 @@ style='background-image:url("img/bg/bg4.jpg")'>
 
 <div
 class='bg-img'
-style='background-image:url("img/bg/bg1.jpg")'>
+id='team'
+style='background-image:url("img/bg/bg4.jpg")'>
   <div class='bg-center-container'>
     <h1 class='bg-heading'>
       The Team
@@ -141,6 +145,7 @@ style='background-image:url("img/bg/bg1.jpg")'>
 
 <div
 class='bg-img'
+id='news'
 style='background-image:url("img/bg/bg1.jpg")'>
   <div class='bg-center-container'>
     <h1 class='bg-heading'>
@@ -165,6 +170,36 @@ style='background-image:url("img/bg/bg1.jpg")'>
         </div>
       </div>
     <% } %>
+</div>
+
+<div
+class='bg-img'
+id='contact'
+style='background-image:url("img/bg/bg2.jpg")'>
+  <div class='bg-center-container'>
+    <h1 class='bg-heading'>
+      Contact Us
+    </h1>
+  </div>
+</div>
+
+<div class='grid-x grid-padding-x grid-container medium-up-2 grid-padding-y add-padd' data-equalizer>
+  <div class='cell out-vc' data-equalizer-watch>
+    <div class='in-vc'>
+      <h5>Phone: <a href="tel:+1(412) 624-7494">(412) 624-7494</a><br/>
+        Email: <a href="mailto:agurkar1@pitt.edu">agurkar1@pitt.edu</a></h5>
+      <h5>Administrative Assistant: Beth Thomas</h5>
+      <h5>Phone: <a href="tel:+1(412) 864-2507">(412) 864-2507</a><br/>
+        E-mail: <a href="mailto:agurkar1@pitt.edu">eat8@pitt.edu</a></h5>
+    </div>
+  </div>
+  <div class='cell out-vc' data-equalizer-watch>
+    <div class='in-vc'>
+      <div class="responsive-embed widescreen">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.052495234886!2d-79.96121548470397!3d40.429836479363495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8834f19ca4e5cdfd%3A0x9b228e7fd9da8772!2sGurkar+Lab!5e0!3m2!1sen!2sus!4v1507475234222" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
 </div>
 
 <% include ../partials/footer %>
