--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -48,7 +48,7 @@ style='background-image:url("img/bg/bg2.jpg")'>
       <p class='web-pro-text'>
         Aditi U. Gurkar is an Assistant Professor in the Aging Institute, Division of Geriatric Medicine at the University of Pittsburgh. I believe that aging is one true mystery that surrounds us. Aging is inescapable and unfortunately the principal risk factor for a number of diseases including cancer, heart disease and Alzheimer disease (AD). If we can therefore unlock this mystery at a molecular level, we could uncover the Fountain of Youth and live healthier, fuller lives.
       </p>
-      <button class="hollow button" href="#">Learn More About Aditi Gurkar </button>
+      <a class="hollow button" href="./Aditi-Gurkar">Learn More About Aditi Gurkar </a>
     </div>
   </div>
 </div>
@@ -103,13 +103,12 @@ style='background-image:url("img/bg/bg4.jpg")'>
           </h4>
           <h6 class='publication-author'><%=results.publications[i].author %></h6>
           <p class='publiction-journel'><%=results.publications[i].journal %></p>
-          <button class="hollow button" href="#">Read More</button>
         </div>
       </div>
     <% } %>
   </div>
   <div class='cell'>
-    <button class="hollow button" href="#">View All Publications </button>
+    <a class="hollow button" href="./Publications">View All Publications </a>
   </div>
 </div>
 
