--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,20 +1,20 @@
-<header>
+<header id='header'>
     <div class="grid-x grid-padding-x" data-equalizer>
-      <div class="medium-3 cell out-vc" data-equalizer-watch>
+      <div class="shrink cell out-vc" data-equalizer-watch>
         <div class="in-vc">
           <a href="./"><img src="img/logos/logo.png" id='header-logo' class='top-bar-logo'></a>
         </div>
       </div>
-      <div class="medium-7 cell out-vc top-bar-center" data-equalizer-watch>
+      <div class="auto cell out-vc top-bar-center" data-equalizer-watch>
         <div class="in-vc">
           <ul class="menu">
-            <li><a class='top-bar-link' href="#about">About</a></li>
-            <li><a class='top-bar-link' href="#research">Research Intrest</a></li>
-            <li><a class='top-bar-link' href="#publications">Publication</a></li>
-            <li><a class='top-bar-link' href="#team">Team</a></li>
-            <li><a class='top-bar-link' href="#news">News</a></li>
+            <li><a class='top-bar-link' href="./#about">About</a></li>
+            <li><a class='top-bar-link' href="./#research">Research Intrest</a></li>
+            <li><a class='top-bar-link' href="./#publications">Publication</a></li>
+            <li><a class='top-bar-link' href="./#team">Team</a></li>
+            <li><a class='top-bar-link' href="./#news">News</a></li>
             <li><a class='top-bar-link' href="./labfun">Get Involved</a></li>
-            <li><a class='top-bar-link' href="#contact">Contact</a></li>
+            <li><a class='top-bar-link' href="./#contact">Contact</a></li>
           </ul>
         </div>
       </div>
