--- a/views/pages/aditiGurkar.ejs
+++ b/views/pages/aditiGurkar.ejs
@@ -10,6 +10,42 @@ style='background-image:url("img/bg/bg1.jpg")'>
   </div>
 </div>
 <div class='grid-x grid-container add-padd' >
+  <div class='cell'>
+    <h3 class="white">Aditi U. Gurkar, Ph.D.</h3>
+    <h4 class="white">Principal Investigator</h4>
+
+    <p>Aditi U. Gurkar is an Assistant Professor in the Aging Institute, Division of Geriatric Medicine at the
+      University of Pittsburgh. I believe that aging is one true mystery that surrounds us. Aging is inescapable and unfortunately the
+      principal risk factor for a number of diseases including cancer, heart disease and Alzheimer disease (AD).
+      If we can therefore unlock this mystery at a molecular level, we could uncover the Fountain of Youth and
+    live healthier, fuller lives.</p>
+    <p>
+      <b>Education :</b> B.S.: <b>Florida International University in Miami.</b> Here, I studied Cystic fibrosis (CF) and Pseudomonas
+      aeruginosa in Dr. Kalai Mathee’s lab and to perform bedside-to- bench research moved to Harvard
+      Medical School and Children’s Hospital, Boston. In Dr. Steve Lory’s lab I analyzed colonization patterns
+      of respiratory tract bacterial communities in pediatric patients to better understand mechanisms driving
+    CF severity and antibiotic resistance.</p>
+    <p>
+      Ph.D.: I pursued my Ph.D. in Dr. Cyrus Vaziri’s lab at <b>Boston University School of Medicine</b> and was
+      most fascinated when it became clear that DNA damage, which accumulates through life, contributes to
+    aging pathologies.</p>
+    <p>Post-doc: <b>Massachusetts General Hospital / Harvard Medical School &amp; Broad Institute of MIT and
+    Harvard.</b> As a post-doctoral fellow in Dr. Sam Lee’s lab, I performed high-throughput screens to identify
+    small molecules that could reactivate mutant p53, a tumor suppressor mutated in ~50% cancers. I also
+    worked on molecular mechanism(s) that regulate autophagy, a process required to maintain organismal
+  homeostasis and central to the aging process.</p>
+  <p>
+    I then moved to <b>The Scripps Research Institute,</b> FL to work on the direct impact of DNA damage on
+    aging and age-related decline. My work here has uncovered cellular responses to genotoxic stress that
+    reprogram metabolism and precede cell-fate decisions to influence aging.
+    My long-term goal is to understand how DNA damage-associated metabolic changes impact aging. My
+    other passions in life include making science education fun for pre-schoolers, painting with my kids and I
+  have a M.S. in Indian classical dance.</p>
+  <p>
+    Most inspired by: <em><b>“Do not grow old, no matter how long you live. Never cease to stand like curious
+    children before the great mystery into which we were born” </b></em>- Albert Einstein
+  </p>
+  </div>
 </div>
 
 
