--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -74,7 +74,7 @@ style='background-image:url("img/bg/bg3.jpg")'>
         <p>
           <%=results.researchIntrest[i].description %>
         </p>
-        <button class="hollow button" href="#">Read More</button>
+        <a class="hollow button" href="./research-interests">Read More</a>
       </div>
     </div>
   <% } %>
@@ -165,10 +165,12 @@ style='background-image:url("img/bg/bg1.jpg")'>
           <p class="news-text">
             <%=results.news[i].description %>
           </p>
-          <button class="hollow button" href="#">Read More</button>
         </div>
       </div>
     <% } %>
+    <div class='cell'>
+      <a class="hollow button" href="./news">View All News </a>
+    </div>
 </div>
 
 <div
