--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
         <div class="in-vc">
           <ul class="menu">
             <li><a class='top-bar-link' href="./#about">About</a></li>
-            <li><a class='top-bar-link' href="./#research">Research Intrest</a></li>
+            <li><a class='top-bar-link' href="./#research">Research Interest</a></li>
             <li><a class='top-bar-link' href="./#publications">Publication</a></li>
             <li><a class='top-bar-link' href="./#team">Team</a></li>
             <li><a class='top-bar-link' href="./#news">News</a></li>
