--- a/views/pages/labNews.ejs
+++ b/views/pages/labNews.ejs
@@ -15,7 +15,7 @@ style='background-image:url("img/bg/bg1.jpg")'>
       <div class='my-card'>
         <div 
           class='card-img'
-          style='background-image: url("<%=results.news[i].image %>");'
+          style='background-image: url("<%=results[i].image %>");'
         ></div>
         <h4><%=results[i].name %></h4>
         <p class="news-text">
