--- a/views/pages/researchInterests.ejs
+++ b/views/pages/researchInterests.ejs
@@ -11,15 +11,14 @@ style='background-image:url("img/bg/bg3.jpg")'>
 </div>
 <div class='grid-x grid-container add-padd' >
   <div class='cell'>
-    <ul class="tabs" data-responsive-accordion-tabs="tabs small-accordian medium-accordion large-tabs" id="example-tabs">
-      <li class="tabs-title is-active"><a href="#panel1c" class='my-reserach-tabs' aria-selected="true">Nucleo Mitochondrial Communicome</a></li>
-      <li class="tabs-title"><a class='my-reserach-tabs' href="#panel2c">DNA damage and Heart disease</a></li>
-      <li class="tabs-title"><a class='my-reserach-tabs' href="#panel3c">Genotoxic stress response in post-mitotic cells</a></li>
+    <ul class="tabs research-tabs-head" data-responsive-accordion-tabs="tabs small-accordian medium-accordion large-tabs" id="example-tabs">
+      <li class="tabs-title is-active tab-first"><a href="#panel1c" class='my-reserach-tabs' aria-selected="true">Nucleo Mitochondrial Communicome</a></li>
+      <li class="tabs-title tab-center"><a class='my-reserach-tabs' href="#panel2c">DNA damage and Heart disease</a></li>
+      <li class="tabs-title tab-last"><a class='my-reserach-tabs' href="#panel3c">Genotoxic stress response in post-mitotic cells</a></li>
     </ul>
     
-    <div class="tabs-content" data-tabs-content="example-tabs">
+    <div class="tabs-content research-tabs" data-tabs-content="example-tabs">
       <div class="tabs-panel is-active" id="panel1c">
-        <h3 class="center">Nucleo Mitochondrial Communicome</h3>
         <div class="center">
           <img src="img/research/e1.jpg" class='research-img' alt="Nucleo-Mitochondrial Communicome">
         </div>
@@ -37,8 +36,6 @@ style='background-image:url("img/bg/bg3.jpg")'>
         </p>
       </div>
       <div class="tabs-panel" id="panel2c">
-        <h3 class="center">Nucleo Mitochondrial Communicome</h3>
-        <h3 class="center">DNA damage and Heart disease</h3>
         <div class="center">
           <img src="img/research/e2.jpg" class='research-img' alt="DNA damage &amp; Heart disease">
         </div>
@@ -53,7 +50,6 @@ style='background-image:url("img/bg/bg3.jpg")'>
         </p>
       </div>
       <div class="tabs-panel" id="panel3c">
-        <h3 class="center">Genotoxic stress response in post-mitotic cells</h3>
         <p>Replicative cells respond to DNA damage with cell fate decisions such as cell cycle arrest, cellular
           senescence or apoptosis. However, how mitotic cells respond to such nuclear genotoxic stress in not
         well understood.</p>
