--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
             <li><a class='top-bar-link' href="./#publications">Publication</a></li>
             <li><a class='top-bar-link' href="./#team">Team</a></li>
             <li><a class='top-bar-link' href="./#news">News</a></li>
-            <li><a class='top-bar-link' href="./labfun">Get Involved</a></li>
+            <li><a class='top-bar-link' href="./labfun">Lab Culture</a></li>
             <li><a class='top-bar-link' href="./#contact">Contact</a></li>
           </ul>
         </div>
@@ -22,6 +22,7 @@
         <div class='in-vc'>
           <a target="blank" href="https://twitter.com/healthspan_AUG"><i class="social_header fi-social-twitter size-36"></i></a>
           <a target="blank" href="https://www.linkedin.com/in/aditigurkar/"><i class="social_header fi-social-linkedin size-36"></i></a>
+          <a target="blank" href="https://www.linkedin.com/in/aditigurkar/"><i class="social_header fi-social-instagram size-36"></i></a>
         </div>
       </div>
     </div>
