--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,15 +5,15 @@ class='bg-img'
 style='background-image:url("img/bg/bg1.jpg")'>
   <div class='bg-center-container'>
     <h1 class='bg-heading'>
-      Decoding the cellular responses to genotoxic stress that drive aging
+      Decoding the cellular responses to dna dammage that drive aging
     </h1>
   </div>
 </div>
 <div class='grid-x grid-padding-x grid-container grid-padding-y add-padd'  data-equalizer>
   <div class='medium-6 large-7 cell out-vc'  data-equalizer-watch>
     <div class='in-vc'>
-      <h4><em>“We’ve put more effort into helping folks reach old age than into helping them enjoy it.”</em></h4>
-      <h5>- We WANT to CHANGE this</h5>
+      <h4><em>“We’ve put more effort into helping folks reach old age than into helping them enjoy it.”</em> <b>- We WANT to CHANGE this</b></h4>
+      <h5 class='center'>Welcome to Gurkar Lab!</h5>
       <p class='web-pro-text'>
         The Gurkar lab is interested in defining the molecular mechanisms that drive aging in response to endogenous DNA damage, which accumulates in all of us over time. The majority of individuals over the age of 65 years suffer from at least two chronic degenerative diseases- neurodegeneration, cardiovascular disease, diabetes, cancer etc. These chronic diseases of the elderly consume an increasingly large fraction of our health care costs and rob individuals of their independence and quality of life.
       </p>
