--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -50,10 +50,27 @@ style='background-image:url("img/bg/bg1.jpg")'>
       </svg>
     </div>
     <div class="full-width-testimonial-content">
-      <h5 class="full-width-testimonial-text">Lake Tahoe is the most beautiful place I have ever been to. I have traveled several places in the world, and there might be more beautiful places out there, but none that I have seen. I loved it!
+      <h5 class="full-width-testimonial-text">
+        Working and researching in the Gurkar Lab brought much more than bench experience. The researchers I worked
+with were patient, skilled, and extremely fun, and they conveyed the lab’s meticulous and original strategy for
+exploring the links between aging and DNA damage with unmatched enthusiasm. I loved my time here, and can’t
+wait to see where the research goes!
       </h5>
-      <p class="full-width-testimonial-source">Gavin Newman</p>
-      <span class="full-width-testimonial-source-context">Traveled from San Francisco to Lake Tahoe</span>
+      <div class='testimonial-profile'>
+        <div class='grid-x'>
+          <div class='medium-6 cell medium-offset-3'>
+            <div class='grid-x grid-padding-x'>
+              <div class='cell shrink border-right'>
+                <img class='testimonial-img' src='img/profile-pic/austin.jpg'>
+              </div>
+              <div class='cell auto'>
+                <p class="full-width-testimonial-source">Ella Siefken</p>
+                <span class="full-width-testimonial-source-context">High School Summer Student: Early acceptance at University of Chicago:</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
