--- a/views/pages/labNews.ejs
+++ b/views/pages/labNews.ejs
@@ -10,7 +10,7 @@ style='background-image:url("img/bg/bg1.jpg")'>
   </div>
 </div>
 <div class='grid-x grid-padding-x grid-container medium-up-3 grid-padding-y add-padd' >
-  <!-- <% for (let i = 0; i < results.length; i++) { %>
+  <% for (let i = 0; i < results.length; i++) { %>
     <div class='cell'>
       <div class='my-card'>
         <div 
@@ -23,7 +23,7 @@ style='background-image:url("img/bg/bg1.jpg")'>
         </p>
       </div>
     </div>
-  <% } %> -->
+  <% } %>
 </div>
 
 
