--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -5,34 +5,154 @@ class='bg-img'
 style='background-image:url("img/bg/bg1.jpg")'>
   <div class='bg-center-container'>
     <h1 class='bg-heading'>
-      Lab Fun
+      Lab Culture
     </h1>
   </div>
 </div>
 <div class='grid-x grid-container add-padd' >
   <div class='cell center'>
-    <h3>Images</h3>
+    <h3>Lab Fun</h3>
   </div>
 </div>
 <div class='grid-x grid-container medium-up-3' >
   <%
-    if (results && results.images) {
-    for (let i = 0; i < results.images.length; i++) { 
+    if (results && results.labFun) {
+    for (let i = 0; i < results.labFun.length; i++) { 
   %>
     <div class="cell grid-image">
       <div class='my-card'>
         <div 
           class='card-img thumbnail my-grid-img'
-          onclick='showThisImg("<%=results.images[i] %>")'
-          style='background-image: url("img/Labfun/grid-images/<%=results.images[i] %>");'
+          onclick='showThisImg("<%=results.labFun[i].images %>", "<%= results.labFun[i].dir %>")'
+          style='background-image: url("img/Labfun/grid-images/<%= results.labFun[i].dir %>/<%=results.labFun[i].images[0] %>");'
         ></div>
+        <div class='cell'>
+          <p class='my-grid-text'>
+            <%= results.labFun[i].title %>
+          </p>
+        </div>
       </div>
     </div>
   <% }}%>
 </div>
+<div
+class='bg-img'
+style='background-image:url("img/bg/bg2.jpg")'>
+  <div class='bg-center-container'>
+    <h1 class='bg-heading'>
+      Fun things we do
+    </h1>
+  </div>
+</div>
+<div class='grid-x grid-container grid-padding-y large-offset-2 add-padd' >
+  <div class='cell large-8'>
+    <div class='grid-x grid-padding-x' data-equalizer>
+      <div class='cell shrink out-vc border-right' data-equalizer-watch>
+        <div class='in-vc'>
+          <img src='img/labFun/fun/gredDunn.jpg' class='fun-img'>
+        </div>
+      </div>
+      <div class='cell auto out-vc' data-equalizer-watch>
+        <div class='in-vc'>
+          <h4>
+            Hybridization of science and art
+          </h4>
+          <p>
+            Check out one of our favorite artist. Greg Dunn designs.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class='cell large-8'>
+    <div class='grid-x grid-padding-x' data-equalizer>
+      <div class='cell shrink out-vc border-right' data-equalizer-watch>
+        <div class='in-vc'>
+          <img src='img/labFun/fun/radiolab.jpg' class='fun-img'>
+        </div>
+      </div>
+      <div class='cell auto out-vc' data-equalizer-watch>
+        <div class='in-vc'>
+          <h4>
+            Radiolab
+          </h4>
+          <p>
+            Radiolab can be heard as a podcast produced by WNYC.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class='cell large-8'>
+    <div class='grid-x grid-padding-x' data-equalizer>
+      <div class='cell shrink out-vc border-right' data-equalizer-watch>
+        <div class='in-vc'>
+          <img src='img/labFun/fun/breakthrough.jpg' class='fun-img'>
+        </div>
+      </div>
+      <div class='cell auto out-vc' data-equalizer-watch>
+        <div class='in-vc'>
+          <h4>
+            Breakthroughs “Age of Aging”
+          </h4>
+          <p>
+            National Geographic Channel’s series directed by Ron Howard highlighted aging research as a breakthrough in Nov 2015.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class='cell large-8'>
+    <div class='grid-x grid-padding-x' data-equalizer>
+      <div class='cell shrink out-vc border-right' data-equalizer-watch>
+        <div class='in-vc'>
+          <img src='img/labFun/fun/labFunWebsite.jpg' class='fun-img'>
+        </div>
+      </div>
+      <div class='cell auto out-vc' data-equalizer-watch>
+        <div class='in-vc'>
+          <h4>
+            Awesome Science sites we love
+          </h4>
+          <p>
+            <ul>
+              <li><a href="http://nautil.us/" target="blank">Nautilus</a></li>
+              <li><a href="https://massivesci.com/" target="blank">Massive science</a></li>
+              <li><a href="https://undark.org/" target="blank">Undark</a></li>
+              <li><a href="https://aeon.co/" target="blank">Aeon</a></li>
+            </ul>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class='cell large-8'>
+    <div class='grid-x grid-padding-x' data-equalizer>
+      <div class='cell shrink out-vc border-right' data-equalizer-watch>
+        <div class='in-vc'>
+          <img src='img/labFun/fun/oliver_sacks.jpeg' class='fun-img'>
+        </div>
+      </div>
+      <div class='cell auto out-vc' data-equalizer-watch>
+        <div class='in-vc'>
+          <h4>
+            Oliver Sacks
+          </h4>
+          <p>
+            Oliver Sacks- always inspiring!
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="reveal" id="my-img-modal" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
   <div class='big-grid-img'>
     <img class='grid-x' id='img-show'/>
+    <div class='arrow-div'>
+      <span onclick='goPrev()' class='fi fi-arrow-left'></span>
+      <span onclick='goNext()' class='fi fi-arrow-right'></span>
+    </div>
   </div>
   <button class="close-button" data-close aria-label="Close reveal" type="button">
     <span aria-hidden="true">&times;</span>
