--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,5 @@
-<script src="js/vendor/jquery.js"></script>
-<script src="js/vendor/what-input.js"></script>
-<script src="js/vendor/foundation.js"></script>
-<script src="js/app.js"></script>
+
+<script src="<% if(dirName) { %><%=dirName%><%}%>/js/vendor/jquery.js"></script>
+<script src="<% if(dirName) { %><%=dirName%><%}%>/js/vendor/what-input.js"></script>
+<script src="<% if(dirName) { %><%=dirName%><%}%>/js/vendor/foundation.js"></script>
+<script src="<% if(dirName) { %><%=dirName%><%}%>/js/app.js"></script>
