--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,19 +2,15 @@
     <div class="grid-x grid-padding-x" data-equalizer>
       <div class="shrink cell out-vc" data-equalizer-watch>
         <div class="in-vc">
-          <a href="./"><img src="img/logos/logo.png" id='header-logo' class='top-bar-logo'></a>
+          <a href="<% if(dirName) { %><%=dirName%><%}%>"><img src="<% if(dirName) { %><%=dirName%><%}%>/img/logos/logo.png" id='header-logo' class='top-bar-logo'></a>
         </div>
       </div>
       <div class="auto cell out-vc top-bar-center" data-equalizer-watch>
         <div class="in-vc">
           <ul class="menu">
-            <li><a class='top-bar-link' href="./#about">About</a></li>
-            <li><a class='top-bar-link' href="./#research">Research Interest</a></li>
-            <li><a class='top-bar-link' href="./#publications">Publication</a></li>
-            <li><a class='top-bar-link' href="./#team">Team</a></li>
-            <li><a class='top-bar-link' href="./#news">News</a></li>
-            <li><a class='top-bar-link' href="./labfun">Lab Culture</a></li>
-            <li><a class='top-bar-link' href="./#contact">Contact</a></li>
+            <% for(let i = 0; i < pages.length; i++) { %>
+            <li><a class='top-bar-link' href="<% if(dirName) { %><%=dirName%><%}%><%= pages[i].link %>"><%= pages[i].title %></a></li>
+            <% } %>
           </ul>
         </div>
       </div>
