--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,7 +3,7 @@
 <div
 class='bg-img'
 style='background-image:url("img/bg/bg1.jpg")'>
-  <div class='bg-center-container'>
+  <div class='bg-center-container main-header'>
     <h1 class='bg-heading'>
       Developing therapies to target the primary risk factor for all of these diseases, aging itself, is a promising yet challenging solution. The first step is to define the molecular mechanisms that drive aging. We believe that this will reveal novel therapeutic targets that can be further harnessed to extend healthy life.
     </h1>
@@ -12,8 +12,11 @@ style='background-image:url("img/bg/bg1.jpg")'>
 <div class='grid-x grid-padding-x grid-container grid-padding-y add-padd'  data-equalizer>
   <div class='medium-6 large-7 cell out-vc'  data-equalizer-watch>
     <div class='in-vc'>
+      <h5><em>Frank Howard Clark</em></h5>
+      <hr/>
       <h4><em>“We’ve put more effort into helping folks reach old age than into helping them enjoy it.”</em> <b>- We WANT to CHANGE this</b></h4>
-      <h5 class='center'>Welcome to Gurkar Lab!</h5>
+      <hr/>
+      <h5 >Welcome to Gurkar Lab!</h5>
       <p class='web-pro-text'>
         The Gurkar lab is interested in defining the molecular mechanisms that drive aging in response to endogenous DNA damage, which accumulates in all of us over time. The majority of individuals over the age of 65 years suffer from at least two chronic degenerative diseases- neurodegeneration, cardiovascular disease, diabetes, cancer etc. These chronic diseases of the elderly consume an increasingly large fraction of our health care costs and rob individuals of their independence and quality of life.
       </p>
