--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -158,42 +158,70 @@ style='background-image:url("img/bg/bg2.jpg")'>
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
-<div class="full-width-testimonial">
-  <div class="full-width-testimonial-section">
-    <div class="full-width-testimonial-icon text-center">
-      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-         width="41px" height="34px" viewBox="-235 240 41 34" style="enable-background:new -235 240 41 34;" xml:space="preserve">
-          <path class="quote-path" d="M-231.3,260.4c0-5,1.3-8.8,3.7-11.7c2.4-2.8,6-4.6,10.5-5.5v5c-3.5,1-6,2.8-7.1,5.5c-0.7,1.4-0.9,2.8-0.8,4
-            h8.1v12.8h-14.4V260.4z"/>
-          <path class="quote-path" d="M-212,260.4c0-5,1.3-8.8,3.7-11.7c2.4-2.8,6-4.6,10.5-5.5v5c-3.5,1-6,2.8-7.1,5.5c-0.7,1.4-0.9,2.8-0.8,4h8.1
-            v12.8H-212V260.4z"/>
-      </svg>
+
+<div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
+  <div class="orbit-wrapper">
+    <div class="orbit-controls">
+      <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
+      <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
     </div>
-    <div class="full-width-testimonial-content">
-      <h5 class="full-width-testimonial-text">
-        Working and researching in the Gurkar Lab brought much more than bench experience. The researchers I worked
-with were patient, skilled, and extremely fun, and they conveyed the lab’s meticulous and original strategy for
-exploring the links between aging and DNA damage with unmatched enthusiasm. I loved my time here, and can’t
-wait to see where the research goes!
-      </h5>
-      <div class='testimonial-profile'>
-        <div class='grid-x'>
-          <div class='medium-6 cell medium-offset-3'>
-            <div class='grid-x grid-padding-x'>
-              <div class='cell shrink border-right'>
-                <img class='testimonial-img' src='img/profile-pic/austin.jpg'>
-              </div>
-              <div class='cell auto'>
-                <p class="full-width-testimonial-source">Ella Siefken</p>
-                <span class="full-width-testimonial-source-context">High School Summer Student: Early acceptance at University of Chicago:</span>
+    <ul class="orbit-container">
+      <%
+        if (results && results.testimonials) {
+        for (let i = 0; i < results.testimonials.length; i++) { 
+      %>
+      <li class="is-active orbit-slide">
+        <div class="full-width-testimonial">
+          <div class="full-width-testimonial-section">
+            <div class="full-width-testimonial-icon text-center">
+              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                 width="41px" height="34px" viewBox="-235 240 41 34" style="enable-background:new -235 240 41 34;" xml:space="preserve">
+                  <path class="quote-path" d="M-231.3,260.4c0-5,1.3-8.8,3.7-11.7c2.4-2.8,6-4.6,10.5-5.5v5c-3.5,1-6,2.8-7.1,5.5c-0.7,1.4-0.9,2.8-0.8,4
+                    h8.1v12.8h-14.4V260.4z"/>
+                  <path class="quote-path" d="M-212,260.4c0-5,1.3-8.8,3.7-11.7c2.4-2.8,6-4.6,10.5-5.5v5c-3.5,1-6,2.8-7.1,5.5c-0.7,1.4-0.9,2.8-0.8,4h8.1
+                    v12.8H-212V260.4z"/>
+              </svg>
+            </div>
+            <div class="full-width-testimonial-content">
+              <h5 class="full-width-testimonial-text">
+                <%=results.testimonials[i].description %>
+              </h5>
+              <div class='testimonial-profile'>
+                <div class='grid-x'>
+                  <div class='medium-6 cell medium-offset-3'>
+                    <div class='grid-x grid-padding-x'>
+                      <div class='cell shrink border-right'>
+                        <img class='testimonial-img' src='<%=results.testimonials[i].image %>'>
+                      </div>
+                      <div class='cell auto'>
+                        <p class="full-width-testimonial-source"><%=results.testimonials[i].name %></p>
+                        <span class="full-width-testimonial-source-context"><%=results.testimonials[i].title %></span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </div>
+      </li>
+      <%}}%>
+    </ul>
   </div>
+  <nav class="orbit-bullets">
+    <button class="is-active" data-slide="0">
+      <span class="show-for-sr">First slide details.</span>
+      <span class="show-for-sr" data-slide-active-label>Current Slide</span>
+    </button>
+    <%
+      if (results && results.testimonials) {
+      for (let i = 0; i < results.testimonials.length; i++) { 
+    %>
+      <button data-slide="<%=i+1 %>"><span class="show-for-sr"></span></button>
+    <%}}%>
+  </nav>
 </div>
+
 
 
 
