--- a/public/css/app.css
+++ b/public/css/app.css
@@ -196,6 +196,21 @@ h1, h2, h3, h4, h5, h5 {
   max-height: 150px;
   overflow-y: auto;
 }
+.full-width-testimonial-text::-webkit-scrollbar {
+  width: 0.5em;
+ height: 0.5em;
+}
+
+.full-width-testimonial-text::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+.ull-width-testimonial-text::-webkit-scrollbar-thumb {
+background-color: rgba(2, 2, 2, 0.8);
+outline: 1px solid #fff;
+border-radius:10px;
+}
+
 
 .full-width-testimonial-section .full-width-testimonial-text {
   font-weight: 300;
