--- a/public/css/app.css
+++ b/public/css/app.css
@@ -168,9 +168,15 @@ h1, h2, h3, h4, h5, h5 {
 
 
 /* Testimonials styles */
+.my-orbit {
+  background-image: url("../img/bg/bg2.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
 .full-width-testimonial {
-  background: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.1)), url("../img/bg/bg2.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.1));
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -202,11 +208,11 @@ h1, h2, h3, h4, h5, h5 {
 }
 
 .full-width-testimonial-text::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
 }
 
 .ull-width-testimonial-text::-webkit-scrollbar-thumb {
-background-color: rgba(2, 2, 2, 0.8);
+background-color: rgba(255, 255, 255, 0.8);
 outline: 1px solid #fff;
 border-radius:10px;
 }
