--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -165,7 +165,7 @@ style='background-image:url("img/bg/bg2.jpg")'>
       <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
       <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
     </div>
-    <ul class="orbit-container">
+    <ul class="orbit-container my-orbit">
       <%
         if (results && results.testimonials) {
         for (let i = 0; i < results.testimonials.length; i++) { 
@@ -215,9 +215,9 @@ style='background-image:url("img/bg/bg2.jpg")'>
     </button>
     <%
       if (results && results.testimonials) {
-      for (let i = 0; i < results.testimonials.length; i++) { 
+      for (let i = 1; i < results.testimonials.length + 1; i++) { 
     %>
-      <button data-slide="<%=i+1 %>"><span class="show-for-sr"></span></button>
+      <button data-slide="<%=i %>"><span class="show-for-sr"></span></button>
     <%}}%>
   </nav>
 </div>
