--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,7 +18,7 @@
         <div class='in-vc'>
           <a target="blank" href="https://twitter.com/healthspan_AUG"><i class="social_header fi-social-twitter size-36"></i></a>
           <a target="blank" href="https://www.linkedin.com/in/aditigurkar/"><i class="social_header fi-social-linkedin size-36"></i></a>
-          <a target="blank" href="https://www.linkedin.com/in/aditigurkar/"><i class="social_header fi-social-instagram size-36"></i></a>
+          <a target="blank" href="https://www.instagram.com/thegurkarlab/"><i class="social_header fi-social-instagram size-36"></i></a>
         </div>
       </div>
     </div>
