Added research intrest

--- a/views/pages/researchInterests.ejs
+++ b/views/pages/researchInterests.ejs
@@ -28,10 +28,6 @@ style='background-image:url("<% if(dirName) { %><%=dirName%><%}%>/img/bg/bg3.jpg
               alters cellular and metabolic programs, leading to progression of multiple, age- related degenerative
               diseases.
             </p>
-          </div>
-        </div>
-        <div class='grid-x'>
-          <div class='row'>
             <p>
               Our lab characterizes novel regulators of DNA damage-dependent metabolic reprogramming. To study this we use the strengths of two very powerful
               model systems: the nematode,&nbsp;<em>Caenorhabditis elegans&nbsp; (C. elegans)</em>, a genetically tractable model
@@ -43,18 +39,22 @@ style='background-image:url("<% if(dirName) { %><%=dirName%><%}%>/img/bg/bg3.jpg
         </div>
       </div>
       <div class="tabs-panel <% if(tab === 'DNA damage and Heart disease'.replace(/\s/g, '_')) { %> is-active <% } %>" id="panel2c">
-        <div class="center">
-          <img src="<% if(dirName) { %><%=dirName%><%}%>/img/research/e2.jpg" class='research-img' alt="DNA damage &amp; Heart disease">
+        <div class='grid-x grid-padding-x'>
+          <div class='shrink cell'>
+            <img src="<% if(dirName) { %><%=dirName%><%}%>/img/research/e2.jpg" class='research-img' alt="DNA damage &amp; Heart disease">
+          </div>
+          <div class='cell auto'>
+            <p>
+              Problems with DNA repair pathways have been observed in cardiac failure patients. Additionally, recent
+              data suggests that pediatric patients treated with genotoxic agents, develop disabling or life-threatening age-
+              related diseases compared to their siblings.&nbsp; This includes stroke, myocardial infarction, congestive
+              heart failure, insulin resistance and cardiovascular disease.</p>
+            <p>
+              Research in the Gurkar lab utilizes a model that lacks DNA repair in the cardiac muscle of mice to
+              uncover crucial components essential for defense against such genotoxic stress.
+            </p>
+          </div>
         </div>
-        <p>
-          Problems with DNA repair pathways have been observed in cardiac failure patients. Additionally, recent
-          data suggests that pediatric patients treated with genotoxic agents, develop disabling or life-threatening age-
-          related diseases compared to their siblings.&nbsp; This includes stroke, myocardial infarction, congestive
-          heart failure, insulin resistance and cardiovascular disease.</p>
-        <p>
-          Research in the Gurkar lab utilizes a model that lacks DNA repair in the cardiac muscle of mice to
-          uncover crucial components essential for defense against such genotoxic stress.
-        </p>
       </div>
       <div class="tabs-panel <% if(tab === 'Genotoxic stress response in post-mitotic cells'.replace(/\s/g, '_')) { %> is-active <% } %>" id="panel3c">
         <p>Replicative cells respond to DNA damage with cell fate decisions such as cell cycle arrest, cellular
