--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -49,7 +49,7 @@ style='background-image:url("img/bg/bg2.jpg")'>
     <div class='grid-x grid-padding-x' data-equalizer>
       <div class='cell shrink out-vc border-right' data-equalizer-watch>
         <div class='in-vc'>
-          <img src='img/labFun/fun/gredDunn.jpg' class='fun-img'>
+          <img src='img/Labfun/fun/gredDunn.jpg' class='fun-img'>
         </div>
       </div>
       <div class='cell auto out-vc' data-equalizer-watch>
@@ -68,7 +68,7 @@ style='background-image:url("img/bg/bg2.jpg")'>
     <div class='grid-x grid-padding-x' data-equalizer>
       <div class='cell shrink out-vc border-right' data-equalizer-watch>
         <div class='in-vc'>
-          <img src='img/labFun/fun/radiolab.jpg' class='fun-img'>
+          <img src='img/Labfun/fun/radiolab.jpg' class='fun-img'>
         </div>
       </div>
       <div class='cell auto out-vc' data-equalizer-watch>
@@ -87,7 +87,7 @@ style='background-image:url("img/bg/bg2.jpg")'>
     <div class='grid-x grid-padding-x' data-equalizer>
       <div class='cell shrink out-vc border-right' data-equalizer-watch>
         <div class='in-vc'>
-          <img src='img/labFun/fun/breakthrough.jpg' class='fun-img'>
+          <img src='img/Labfun/fun/breakthrough.jpg' class='fun-img'>
         </div>
       </div>
       <div class='cell auto out-vc' data-equalizer-watch>
@@ -106,7 +106,7 @@ style='background-image:url("img/bg/bg2.jpg")'>
     <div class='grid-x grid-padding-x' data-equalizer>
       <div class='cell shrink out-vc border-right' data-equalizer-watch>
         <div class='in-vc'>
-          <img src='img/labFun/fun/labFunWebsite.jpg' class='fun-img'>
+          <img src='img/Labfun/fun/labFunWebsite.jpg' class='fun-img'>
         </div>
       </div>
       <div class='cell auto out-vc' data-equalizer-watch>
@@ -130,7 +130,7 @@ style='background-image:url("img/bg/bg2.jpg")'>
     <div class='grid-x grid-padding-x' data-equalizer>
       <div class='cell shrink out-vc border-right' data-equalizer-watch>
         <div class='in-vc'>
-          <img src='img/labFun/fun/oliver_sacks.jpeg' class='fun-img'>
+          <img src='img/Labfun/fun/oliver_sacks.jpeg' class='fun-img'>
         </div>
       </div>
       <div class='cell auto out-vc' data-equalizer-watch>
