--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -222,7 +222,43 @@ style='background-image:url("img/bg/bg2.jpg")'>
   </nav>
 </div>
 
+<div
+class='bg-img'
+style='background-image:url("img/bg/bg2.jpg")'>
+  <div class='bg-center-container'>
+    <h1 class='bg-heading'>
+      Collaborations
+    </h1>
+  </div>
+</div>
 
+<div class='grid-x grid-container medium-up-5 grid-padding-y add-padd' >
+  <div class='cell center'>
+    <h6>Patricia Opresko, Ph.D</h6>
+    <hr/>
+    <a href='http://www.opreskolab.com/' target='blank' class='hollow button'>Website</a>
+  </div>
+  <div class='cell center'>
+    <h6>Charleen Chu, Ph.D.</h6>
+    <hr/>
+    <a href='https://chulab.weebly.com/' target='blank' class='hollow button'>Website</a>
+  </div>
+  <div class='cell center'>
+    <h6>Steven Chan,MD, PhD, FAHA</h6>
+    <hr/>
+    <a href='https://www.sychanlab.pitt.edu/' target='blank' class='hollow button'>Website</a>
+  </div>
+  <div class='cell center'>
+    <h6>Tzahi Cohen-Karni</h6>
+    <hr/>
+    <a href='https://www.cohenkarni.com/' target='blank' class='hollow button'>Website</a>
+  </div>
+  <div class='cell center'>
+    <h6>TMichael Jurckzak</h6>
+    <hr/>
+    <a href='https://profiles.dom.pitt.edu/faculty_info.aspx/Jurczak6570' target='blank' class='hollow button'>Website</a>
+  </div>
+</div>
 
 
 <% include ../partials/footer %>
