--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -232,31 +232,53 @@ style='background-image:url("img/bg/bg2.jpg")'>
   </div>
 </div>
 
-<div class='grid-x grid-container medium-up-3 grid-padding-y grid-padding-x add-padd' >
-  <div class='cell center'>
-    <h6>Patricia Opresko, Ph.D</h6>
-    <hr/>
-    <a href='http://www.opreskolab.com/' target='blank' class='hollow button small'>Website</a>
-  </div>
-  <div class='cell center'>
-    <h6>Charleen Chu, Ph.D.</h6>
-    <hr/>
-    <a href='https://chulab.weebly.com/' target='blank' class='hollow button small'>Website</a>
-  </div>
-  <div class='cell center'>
-    <h6>Steven Chan,MD, PhD, FAHA</h6>
-    <hr/>
-    <a href='https://www.sychanlab.pitt.edu/' target='blank' class='hollow button small'>Website</a>
-  </div>
-  <div class='cell center'>
-    <h6>Tzahi Cohen-Karni</h6>
-    <hr/>
-    <a href='https://www.cohenkarni.com/' target='blank' class='hollow button small'>Website</a>
-  </div>
-  <div class='cell center'>
-    <h6>TMichael Jurckzak</h6>
-    <hr/>
-    <a href='https://profiles.dom.pitt.edu/faculty_info.aspx/Jurczak6570' target='blank' class='hollow button small'>Website</a>
+<div class='grid-x grid-container medium-offset-3 grid-padding-y grid-padding-x add-padd' >
+  <div class='medium-6 cell center'>
+    <div class='grid-x grid-padding-x'>
+      <div class='cell shrink'>
+        <span class="badge"><i class="fi-torso size-36"></i></span>
+      </div>
+      <div class='cell auto'>
+        <h6>Patricia Opresko, Ph.D | 
+          <a href='http://www.opreskolab.com/' target='blank' class='hollow button small'><i class="fi-web"></i></a></h6> 
+      </div>
+    </div>
+    <div class='grid-x grid-padding-x'>
+      <div class='cell shrink'>
+        <span class="badge"><i class="fi-torso size-36"></i></span>
+      </div>
+      <div class='cell auto'>
+        <h6>Charleen Chu, Ph.D. | 
+          <a href='https://chulab.weebly.com/' target='blank' class='hollow button small'><i class="fi-web"></i></a></h6> 
+      </div>
+    </div>
+    <div class='grid-x grid-padding-x'>
+      <div class='cell shrink'>
+        <span class="badge"><i class="fi-torso size-36"></i></span>
+      </div>
+      <div class='cell auto'>
+        <h6>Steven Chan,MD, PhD, FAHA | 
+          <a href='https://www.sychanlab.pitt.edu/' target='blank' class='hollow button small'><i class="fi-web"></i></a></h6> 
+      </div>
+    </div>
+    <div class='grid-x grid-padding-x'>
+      <div class='cell shrink'>
+        <span class="badge"><i class="fi-torso size-36"></i></span>
+      </div>
+      <div class='cell auto'>
+        <h6>Tzahi Cohen-Karni | 
+          <a href='https://www.cohenkarni.com/' target='blank' class='hollow button small'><i class="fi-web"></i></a></h6> 
+      </div>
+    </div>
+    <div class='grid-x grid-padding-x'>
+      <div class='cell shrink'>
+        <span class="badge"><i class="fi-torso size-36"></i></span>
+      </div>
+      <div class='cell auto'>
+        <h6>TMichael Jurckzak | 
+          <a href='https://profiles.dom.pitt.edu/faculty_info.aspx/Jurczak6570' target='blank' class='hollow button small'><i class="fi-web"></i></a></h6> 
+      </div>
+    </div>
   </div>
 </div>
 
