--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -233,10 +233,10 @@ style='background-image:url("img/bg/bg2.jpg")'>
 </div>
 
 <div class='grid-x grid-container medium-offset-3 grid-padding-y grid-padding-x add-padd' >
-  <div class='medium-6 cell center'>
+  <div class='medium-6 cell'>
     <div class='grid-x grid-padding-x'>
       <div class='cell shrink'>
-        <span class="badge"><i class="fi-torso size-36"></i></span>
+        <span class="badge my-badge"><i class="fi-torso size-36"></i></span>
       </div>
       <div class='cell auto'>
         <h6>Patricia Opresko, Ph.D | 
@@ -245,7 +245,7 @@ style='background-image:url("img/bg/bg2.jpg")'>
     </div>
     <div class='grid-x grid-padding-x'>
       <div class='cell shrink'>
-        <span class="badge"><i class="fi-torso size-36"></i></span>
+        <span class="badge my-badge"><i class="fi-torso size-36"></i></span>
       </div>
       <div class='cell auto'>
         <h6>Charleen Chu, Ph.D. | 
@@ -254,7 +254,7 @@ style='background-image:url("img/bg/bg2.jpg")'>
     </div>
     <div class='grid-x grid-padding-x'>
       <div class='cell shrink'>
-        <span class="badge"><i class="fi-torso size-36"></i></span>
+        <span class="badge my-badge"><i class="fi-torso size-36"></i></span>
       </div>
       <div class='cell auto'>
         <h6>Steven Chan,MD, PhD, FAHA | 
@@ -263,7 +263,7 @@ style='background-image:url("img/bg/bg2.jpg")'>
     </div>
     <div class='grid-x grid-padding-x'>
       <div class='cell shrink'>
-        <span class="badge"><i class="fi-torso size-36"></i></span>
+        <span class="badge my-badge"><i class="fi-torso size-36"></i></span>
       </div>
       <div class='cell auto'>
         <h6>Tzahi Cohen-Karni | 
@@ -272,7 +272,7 @@ style='background-image:url("img/bg/bg2.jpg")'>
     </div>
     <div class='grid-x grid-padding-x'>
       <div class='cell shrink'>
-        <span class="badge"><i class="fi-torso size-36"></i></span>
+        <span class="badge my-badge"><i class="fi-torso size-36"></i></span>
       </div>
       <div class='cell auto'>
         <h6>TMichael Jurckzak | 
