--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -240,7 +240,7 @@ style='background-image:url("img/bg/bg2.jpg")'>
       </div>
       <div class='cell auto'>
         <h6>Patricia Opresko, Ph.D | 
-          <a href='http://www.opreskolab.com/' target='blank' class='hollow button small'><i class="fi-web"></i></a></h6> 
+          <a href='http://www.opreskolab.com/' target='blank' ><i class="fi-web"></i></a></h6> 
       </div>
     </div>
     <div class='grid-x grid-padding-x'>
@@ -249,7 +249,7 @@ style='background-image:url("img/bg/bg2.jpg")'>
       </div>
       <div class='cell auto'>
         <h6>Charleen Chu, Ph.D. | 
-          <a href='https://chulab.weebly.com/' target='blank' class='hollow button small'><i class="fi-web"></i></a></h6> 
+          <a href='https://chulab.weebly.com/' target='blank' ><i class="fi-web"></i></a></h6> 
       </div>
     </div>
     <div class='grid-x grid-padding-x'>
@@ -258,7 +258,7 @@ style='background-image:url("img/bg/bg2.jpg")'>
       </div>
       <div class='cell auto'>
         <h6>Steven Chan,MD, PhD, FAHA | 
-          <a href='https://www.sychanlab.pitt.edu/' target='blank' class='hollow button small'><i class="fi-web"></i></a></h6> 
+          <a href='https://www.sychanlab.pitt.edu/' target='blank' ><i class="fi-web"></i></a></h6> 
       </div>
     </div>
     <div class='grid-x grid-padding-x'>
@@ -267,7 +267,7 @@ style='background-image:url("img/bg/bg2.jpg")'>
       </div>
       <div class='cell auto'>
         <h6>Tzahi Cohen-Karni | 
-          <a href='https://www.cohenkarni.com/' target='blank' class='hollow button small'><i class="fi-web"></i></a></h6> 
+          <a href='https://www.cohenkarni.com/' target='blank' ><i class="fi-web"></i></a></h6> 
       </div>
     </div>
     <div class='grid-x grid-padding-x'>
@@ -276,7 +276,7 @@ style='background-image:url("img/bg/bg2.jpg")'>
       </div>
       <div class='cell auto'>
         <h6>TMichael Jurckzak | 
-          <a href='https://profiles.dom.pitt.edu/faculty_info.aspx/Jurczak6570' target='blank' class='hollow button small'><i class="fi-web"></i></a></h6> 
+          <a href='https://profiles.dom.pitt.edu/faculty_info.aspx/Jurczak6570' target='blank' ><i class="fi-web"></i></a></h6> 
       </div>
     </div>
   </div>
